--- a/app/catalog-page.html
+++ b/app/catalog-page.html
@@ -438,8 +438,8 @@
                     <span class="filter-price__to"></span> ₽
                   </span>
                 </label>
-                <input class="filter-price__input" type="text" name="price" id="price" data-min="0" data-max="1150" data-from="100"
-                  data-to="1000">
+                <input class="filter-price__input" type="text" name="price" id="price" data-min="0" data-max="1150"
+                  data-from="100" data-to="1000">
               </form>
 
             </div>
@@ -1249,11 +1249,13 @@
     </div>
 
     <div class="footer-bottom">
-      <div class="footer-bottom__wrap">
-        <p class="footer-bottom__text">© 2021 фрешок</p>
-        <div class="footer-bottom__img ">
-          <img class="footer-bottom__img--viza" src="images/icons/icon-visa.svg" width="93" height="29" alt="viza">
-          <img class="footer-bottom__img--mc" src="images/icons/icon-mc.svg" width="49" height="29" alt="mastercard">
+      <div class="container">
+        <div class="footer-bottom__wrap">
+          <p class="footer-bottom__text">© 2021 фрешок</p>
+          <div class="footer-bottom__img ">
+            <img class="footer-bottom__img--viza" src="images/icons/icon-visa.svg" width="93" height="29" alt="viza">
+            <img class="footer-bottom__img--mc" src="images/icons/icon-mc.svg" width="49" height="29" alt="mastercard">
+          </div>
         </div>
       </div>
     </div>
