--- a/app/index.html
+++ b/app/index.html
@@ -1349,12 +1349,14 @@
     </div>
 
     <div class="footer-bottom">
-      <div class="footer-bottom__wrap">
+      <div class="container">
+         <div class="footer-bottom__wrap">
         <p class="footer-bottom__text">© 2021 фрешок</p>
         <div class="footer-bottom__img ">
           <img class="footer-bottom__img--viza" src="images/icons/icon-visa.svg" width="93" height="29" alt="viza">
           <img class="footer-bottom__img--mc" src="images/icons/icon-mc.svg" width="49" height="29" alt="mastercard">
         </div>
+      </div>
       </div>
     </div>
   </footer>
