--- a/app/page.html
+++ b/app/page.html
@@ -231,7 +231,7 @@
       </ul>
     </nav>
   </header>
-  
+
   <main class="main">
 
   </main>
@@ -347,11 +347,13 @@
     </div>
 
     <div class="footer-bottom">
-      <div class="footer-bottom__wrap">
-        <p class="footer-bottom__text">© 2021 фрешок</p>
-        <div class="footer-bottom__img ">
-          <img class="footer-bottom__img--viza" src="images/icons/icon-visa.svg" width="93" height="29" alt="viza">
-          <img class="footer-bottom__img--mc" src="images/icons/icon-mc.svg" width="49" height="29" alt="mastercard">
+      <div class="container">
+        <div class="footer-bottom__wrap">
+          <p class="footer-bottom__text">© 2021 фрешок</p>
+          <div class="footer-bottom__img ">
+            <img class="footer-bottom__img--viza" src="images/icons/icon-visa.svg" width="93" height="29" alt="viza">
+            <img class="footer-bottom__img--mc" src="images/icons/icon-mc.svg" width="49" height="29" alt="mastercard">
+          </div>
         </div>
       </div>
     </div>
@@ -359,6 +361,6 @@
 
 
   <script src="js/main.min.js"></script>
-  </body>
+</body>
 
-  </html>
+</html>
