correrted catalog-page, product-page

--- a/app/product-page.html
+++ b/app/product-page.html
@@ -264,24 +264,22 @@
             <h2 class="product-content__title product-content__title--adaptive">
               Питахайя красная с белой мякотью
             </h2>
-            <!-- popup -->
             <div class="product-one__slide product-slide">
-              <!-- slik -->
               <ul class="product-slide__list">
-                <!-- стилизация -->
-                <li class="product-slide__item">
+                <!-- вообще не понимаю как сделать чтобы открывалась галерея в виде попапа  и застилизовать  ее. Пробывала подключать магнифик попап вместе со сликом, пробывала id связать. но ничего не выходит-->
+                <li class="product-slide__item" id="img-1">
                   <a class="product-slide__link" href="images/product-page/1.jpg">
                     <img class="product-slide__img" src="images/product-page/1.jpg" alt="питахая">
                   </a>
                 </li>
 
-                <li class="product-slide__item">
+                <li class="product-slide__item" id="img-2">
                   <a class="product-slide__link" href="images/product-page/1.jpg">
                     <img class="product-slide__img" src="images/product-page/1.jpg" alt="питахая">
                   </a>
                 </li>
 
-                <li class="product-slide__item">
+                <li class="product-slide__item" id="img-3">
                   <a class="product-slide__link" href="images/product-page/1.jpg">
                     <img class="product-slide__img" src="images/product-page/1.jpg" alt="питахая">
                   </a>
