--- a/app/catalog-page.html
+++ b/app/catalog-page.html
@@ -429,17 +429,17 @@
                 </h3>
                 <button class="filter-item__btn filter-item__btn--click3" type="button"></button>
               </div>
+              <!-- не вышло сделать так чтобы цену можно было вписать и ползунок подстроился -->
               <form class="filter-price__form" action="#">
                 <label class="filter-price__label" for="price">
                   <span class="filter-price__box">от
-                    <span class="filter-price__from"></span> ₽
+                    <input class="filter-price__from"> ₽
                   </span>
                   <span class="filter-price__box">до
-                    <span class="filter-price__to"></span> ₽
+                    <input class="filter-price__to"> ₽
                   </span>
                 </label>
-                <input class="filter-price__input" type="text" name="price" id="price" data-min="0" data-max="1150"
-                  data-from="100" data-to="1000">
+                <input class="filter-price__input" type="text" name="price" id="price">
               </form>
 
             </div>
