--- a/app/product-page.html
+++ b/app/product-page.html
@@ -60,10 +60,64 @@
           <a class="logo-short" href="#">
             <img class="logo-short" src="images/logo-short.svg" alt="логотип" width="37" height="40">
           </a>
-          <button class="header-bottom__btn" type="button">Каталог продуктов</button>
+
+          <div class="header-bottom__wrapper">
+            <button class="header-bottom__btn" type="button">
+              Каталог продуктов
+            </button>
+            <div class="header-bottom__filter">
+              <a class="header-bottom__filter-btn" href="#">
+                Овощи и фрукты
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Бакалея
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Молочные продукты
+              </a>
+
+              <a class="header-bottom__filter-btn header-bottom__filter-btn--active" href="#">
+                Хлеб
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Мясо
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Колбаса
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Рыба
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Алкоголь
+              </a>
+
+
+              <a class="header-bottom__filter-btn" href="#">
+                Напитки
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Торты
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Мясо
+              </a>
+
+              <a class="header-bottom__filter-btn" href="#">
+                Чай, кофе
+              </a>
+            </div>
+          </div>
 
           <form class="header-bottom__search" action="#">
-
             <div class="header-bottom__search-block">
               <a class="header-bottom__search-vector" href="#">
                 <svg>
@@ -73,7 +127,9 @@
               <input class="header-bottom__search-input" name="search" type="search" aria-label="Найти в магазине"
                 required placeholder="Найти в магазине ...">
             </div>
-            <button class="header-bottom__search-btn btn-black" type="button">поиск</button>
+            <button class="header-bottom__search-btn btn-black" type="button">
+              поиск
+            </button>
           </form>
 
           <ul class="header-bottom__user-nav">
@@ -102,7 +158,7 @@
               </a>
             </li>
 
-            <li class="header-bottom__user-item">
+            <li class="header-bottom__user-item header-bottom__user-item--cart">
               <a class="header-bottom__user-link header-bottom__user-link--cart" href="#" aria-label="корзина">
                 <svg>
                   <use xlink:href="images/sprite.svg#icon-cart"></use>
@@ -112,6 +168,74 @@
             </li>
           </ul>
         </div>
+      </div>
+
+      <!-- для корзины. отдельно файл scss - cart-menu -->
+      <div class="cart-menu">
+        <div class="cart-menu__top">
+          <h3 class="cart-menu__top-title">
+            Корзина
+          </h3>
+          <button class="cart-menu__top-btn" type="button">
+            очистить корзину
+          </button>
+          <button class="cart-menu__btn btn__close" type="button"></button>
+        </div>
+
+        <div class="cart-menu__products">
+
+          <article class="cart-menu__products-item">
+            <div class="cart-menu__products-photo">
+              <img class="cart-menu__products-img" src="images/product/pineapple.jpg" alt="ананас">
+            </div>
+            <div class="cart-menu__products-box">
+              <div class="cart-menu__products-top">
+                <p class="cart-menu__products-text">
+                  Ананас, 1 кг
+                </p>
+                <span class="cart-menu__start-price price-style">999₽</span>
+              </div>
+              <div class="cart-menu__products-inner">
+                <button class="cart-menu__products-btn"></button>
+                <form class="cart-menu__products-price" action="#">
+                  <input class="cart-menu__products-num product-content__num" type="number" name="number" value="2"
+                    min="1">
+                  <span class="cart-menu__products-totalprise price-style">1998₽</span>
+                </form>
+              </div>
+            </div>
+          </article>
+
+          <article class="cart-menu__products-item">
+            <div class="cart-menu__products-photo">
+              <img class="cart-menu__products-img" src="images/product/dragon.jpg" alt="питахая">
+            </div>
+            <div class="cart-menu__products-box">
+              <div class="cart-menu__products-top">
+                <p class="cart-menu__products-text">
+                  Питахайя красная с белой мякотью, 1шт
+                </p>
+                <span class="cart-menu__start-price price-style">1019₽</span>
+              </div>
+              <div class="cart-menu__products-inner">
+                <button class="cart-menu__products-btn"></button>
+                <form class="cart-menu__products-price" action="">
+                  <input class="cart-menu__products-num product-content__num" type="number" name="number" value="2"
+                    min="1">
+                  <span class="cart-menu__products-totalprise price-style">2038₽</span>
+                </form>
+              </div>
+            </div>
+          </article>
+        </div>
+
+        <div class="cart-menu__total">
+          <p class="cart-menu__total-text">
+            Товаров на сумму
+          </p>
+          <span class="cart-menu__total-price">2038₽</span>
+        </div>
+        <button class="cart-menu__checkout">Оформить заказ</button>
       </div>
     </div>
 
@@ -265,21 +389,21 @@
               Питахайя красная с белой мякотью
             </h2>
             <div class="product-one__slide product-slide">
+
               <ul class="product-slide__list">
-                <!-- вообще не понимаю как сделать чтобы открывалась галерея в виде попапа  и застилизовать  ее. Пробывала подключать магнифик попап вместе со сликом, пробывала id связать. но ничего не выходит-->
-                <li class="product-slide__item" id="img-1">
+                <li class="product-slide__item">
                   <a class="product-slide__link" href="images/product-page/1.jpg">
                     <img class="product-slide__img" src="images/product-page/1.jpg" alt="питахая">
                   </a>
                 </li>
 
-                <li class="product-slide__item" id="img-2">
+                <li class="product-slide__item">
                   <a class="product-slide__link" href="images/product-page/1.jpg">
                     <img class="product-slide__img" src="images/product-page/1.jpg" alt="питахая">
                   </a>
                 </li>
 
-                <li class="product-slide__item" id="img-3">
+                <li class="product-slide__item">
                   <a class="product-slide__link" href="images/product-page/1.jpg">
                     <img class="product-slide__img" src="images/product-page/1.jpg" alt="питахая">
                   </a>
@@ -296,11 +420,7 @@
                 <span class="product-content__badge">хит</span>
                 <div class="product-content__box">
                   <span class="product-content__code">Код: 0111111</span>
-                  <!-- <div class="product-content__star"> -->
-
-                  <!-- не понимаю почему перестал работать рейтинг, не меняется значение рейтинга ни тут ни в js -->
-                  <div class="product-content__star star" data-rateyo-rating="4"></div>
-                  <!-- </div> -->
+                  <div class="product-content__star star" data-rateyo-rating="4" readonly="readonly"></div>
                   <span class="product-content__status">В наличии</span>
                 </div>
                 <div class="product-content__price">
@@ -325,20 +445,19 @@
               <h3 class="product-content__subtitle">
                 Доставка и оплата
               </h3>
-              <p class="product-content__subtext">
-                <!-- без br не вышло сделать точно как в макете -->
-                Минимальная сумма заказа - 100 руб.<br>
-                Время доставки заказа - 60-120 мин.<br>
-                Оплата осуществляется только банковской картой.<br>
-                Окончательная сумма заказа формируется после сбора товаров.
-              </p>
+              <div class="product-content__subtext">
+                <p>Минимальная сумма заказа - 100 руб.</p>
+                <p>Время доставки заказа - 60-120 мин.</p>
+                <p>Оплата осуществляется только банковской картой.</p>
+                <p>Окончательная сумма заказа формируется после сбора товаров.</p>
+              </div>
               <a class="product-content__more" href="#">Подробнее</a>
             </div>
           </div>
         </div>
 
         <div class="product-tabs">
-          <div class="container product-tabs__container">
+          <div class="product-tabs__container">
             <div class="product-tabs__top">
               <a class="product-tabs__top-item product-tabs__top-item--active" href="#tab-1">
                 описание
